Fix: .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
 DB_TYPE=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=248464
-DB_NAME=wereads
+DB_HOST=HOST
+DB_PORT=PORT
+DB_USER=USERNAME
+DB_PASSWORD=PASSWORD
+DB_NAME=NAME
 
 DATABASE_URL = mysql://root:248464@localhost:3306/wereads
